sort.basic.cocktail.AlgCocktailSort3.scala.error
Compilation error:
AlgCocktailSort3:17: error: ')' expected but integer literal found.
    for (j<- x-2- to 0 by -1) {
                     ^AlgCocktailSort3:28: error: illegal start of simple expression
  }
  ^